@@ -753,45 +753,53 @@
     \x{10b00}\x{a6ef}\x{13007}\x{10857}\x{10b78}\x{10b58}\x{a980}\x{110c1}\x{a4ff}\x{abc0}\x{10a7d}\x{10c48}\x{0800}\x{1aad}\x{aac0}
 
 /^\w+/8W
-  Az_\x{aa}\x{c0}\x{1c5}\x{2b0}\x{3b6}\x{1d7c9}\x{2fa1d}1\x{660}\x{bef}\x{16ee}
+    Az_\x{aa}\x{c0}\x{1c5}\x{2b0}\x{3b6}\x{1d7c9}\x{2fa1d}1\x{660}\x{bef}\x{16ee}
 
 /^[[:xdigit:]]*/8W
-  1a\x{660}\x{bef}\x{16ee}
+    1a\x{660}\x{bef}\x{16ee}
   
 /^\d+/8W
-  1\x{660}\x{bef}\x{16ee}
+    1\x{660}\x{bef}\x{16ee}
   
 /^[[:digit:]]+/8W
-  1\x{660}\x{bef}\x{16ee}
+    1\x{660}\x{bef}\x{16ee}
 
 /^>\s+/8W
-  >\x{20}\x{a0}\x{1680}\x{2028}\x{2029}\x{202f}\x{9}\x{b} 
+    >\x{20}\x{a0}\x{1680}\x{2028}\x{2029}\x{202f}\x{9}\x{b} 
   
 /^>\pZ+/8W
-  >\x{20}\x{a0}\x{1680}\x{2028}\x{2029}\x{202f}\x{9}\x{b} 
+    >\x{20}\x{a0}\x{1680}\x{2028}\x{2029}\x{202f}\x{9}\x{b} 
   
 /^>[[:space:]]*/8W
-  >\x{20}\x{a0}\x{1680}\x{2028}\x{2029}\x{202f}\x{9}\x{b} 
+    >\x{20}\x{a0}\x{1680}\x{2028}\x{2029}\x{202f}\x{9}\x{b} 
 
 /^>[[:blank:]]*/8W
-  >\x{20}\x{a0}\x{1680}\x{180e}\x{2000}\x{202f}\x{9}\x{b}\x{2028} 
+    >\x{20}\x{a0}\x{1680}\x{180e}\x{2000}\x{202f}\x{9}\x{b}\x{2028} 
 
 /^[[:alpha:]]*/8W
-  Az\x{aa}\x{c0}\x{1c5}\x{2b0}\x{3b6}\x{1d7c9}\x{2fa1d}
+    Az\x{aa}\x{c0}\x{1c5}\x{2b0}\x{3b6}\x{1d7c9}\x{2fa1d}
 
 /^[[:alnum:]]*/8W
-  Az\x{aa}\x{c0}\x{1c5}\x{2b0}\x{3b6}\x{1d7c9}\x{2fa1d}1\x{660}\x{bef}\x{16ee}
+    Az\x{aa}\x{c0}\x{1c5}\x{2b0}\x{3b6}\x{1d7c9}\x{2fa1d}1\x{660}\x{bef}\x{16ee}
 
 /^[[:cntrl:]]*/8W
-  \x{0}\x{09}\x{1f}\x{7f}\x{9f} 
+    \x{0}\x{09}\x{1f}\x{7f}\x{9f} 
 
 /^[[:graph:]]*/8W
-  A\x{a1}\x{a0}
+    A\x{a1}\x{a0}
 
 /^[[:print:]]*/8W
-  A z\x{a0}\x{a1}
+    A z\x{a0}\x{a1}
 
 /^[[:punct:]]*/8W
-  .+\x{a1}\x{a0}
+    .+\x{a1}\x{a0}
+
+/\p{Zs}*?\R/
+    ** Failers
+    a\xFCb   
+
+/\p{Zs}*\R/                                                                    
+    ** Failers 
+    a\xFCb   
 
 /-- End of testinput6 --/
